Fix unread followed nav icon on mobile
Fixes #791

--- a/app/assets/stylesheets/thredded/layout/_user-navigation.scss
+++ b/app/assets/stylesheets/thredded/layout/_user-navigation.scss
@@ -26,4 +26,7 @@
   height: 1em;
   top: 0.1em;
   position: relative;
+  @include thredded-media-tablet-and-down {
+    display: none;
+  }
 }
